# fsutils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: USAGE_DirManager.md  USAGE_dirs.md  USAGE_io.md
src/fsutils/: __init__.py  dir_stats.py  dirs.py  io.py  paths.py
tests/: test_dirmanager.py  test_dirs.py  test_io.py
